--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "postcss": "^8.4.38",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-sort-media-queries": "^5.2.0",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "sharp": "^0.33.3"
   },
   "dependencies": {
     "node-fetch": "^2.6.1"
