--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/mtw72/R2-revising.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "MT Wong",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mtw72/R2-revising/issues"
@@ -21,7 +21,6 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/register": "^7.23.7",
-    "beepbeep": "^1.3.0",
     "browser-sync": "^3.0.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^9.0.0",
