--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp-webp": "^4.0.1",
     "postcss": "^8.4.38",
     "postcss-sort-media-queries": "^5.2.0",
